// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Header> renders correctly - logged in 1`] = `
<div
  className="sc-bdVaJa TVzIH"
>
  <div
    className="sc-bwzfXH gllGzP"
  >
    Tikal Candidator
  </div>
  <button
    className="sc-htpNat jZulDA"
    onClick={[Function]}
  >
    Log Out
  </button>
</div>
`;

exports[`Test <Header> renders correctly - not logged in 1`] = `
<div
  className="sc-bdVaJa TVzIH"
>
  <div
    className="sc-bwzfXH gllGzP"
  >
    Tikal Candidator
  </div>
</div>
`;
